<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/randlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edu.qc.seclass.tipcalculator.TipCalculatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/tipCalculator"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar2"
            app:layout_constraintTop_toTopOf="@+id/toolbar2" />

        <EditText
            android:id="@+id/checkValueAmount"
            android:layout_width="188dp"
            android:layout_height="59dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="Enter A Number"
            android:ems="10"
            android:hint="@string/e_g_100"
            android:inputType="number"
            android:labelFor="@id/checkValueAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <Button
            android:id="@+id/buttonCompute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/buttonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partySizeValue" />

        <EditText
            android:id="@+id/partySizeValue"
            android:layout_width="199dp"
            android:layout_height="62dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/e_g_10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkValueAmount"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="111dp"
            android:layout_height="23dp"

            android:layout_marginTop="48dp"
            android:text="@string/checkAmountString"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/checkValueAmount"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="108dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:text="@string/checkPartyString"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/partySizeValue"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/fifteenPercentTipValue"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/_11_5"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
            android:autofillHints="" />

        <EditText
            android:id="@+id/twentyPercentTipValue"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/_12_0"
            android:text=""
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
            app:layout_constraintVertical_bias="1.0"
            android:autofillHints="" />

        <EditText
            android:id="@+id/twentyfivePercentTipValue"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/_12_5"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
            android:autofillHints="" />

        <EditText
            android:id="@+id/fifteenPercentTotalValue"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:hint="@string/_114_99"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipValue"
            app:layout_constraintVertical_bias="1.0"
            android:autofillHints="" />

        <EditText
            android:id="@+id/twentyPercentTotalValue"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="12dp"
            android:text=""
            android:ems="10"
            android:hint="@string/_120_0"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipValue"
            app:layout_constraintVertical_bias="0.0"
            android:autofillHints="" />

        <EditText
            android:id="@+id/twentyfivePercentTotalValue"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/_125_0"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twentyfivePercentTipValue"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="53dp"
            android:layout_height="48dp"
            android:layout_marginTop="68dp"
            android:text="@string/tip"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/fifteenPercentTipValue"
            app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTipValue"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="48dp"
            android:layout_height="34dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="12dp"
            android:text="@string/twenty"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/twentyPercentTipValue"
            app:layout_constraintEnd_toStartOf="@+id/twentyPercentTipValue"
            app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="37dp"
            android:layout_height="36dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="12dp"
            android:text="@string/twentyFive"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/twentyfivePercentTipValue"
            app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTipValue"
            app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="70dp"
            android:layout_height="31dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Total"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/fifteenPercentTotalValue"
            app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTotalValue"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="51dp"
            android:layout_height="41dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            android:text="@string/twenty"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/twentyPercentTotalValue"
            app:layout_constraintEnd_toStartOf="@+id/twentyPercentTotalValue"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="41dp"
            android:layout_height="40dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="12dp"
            android:text="@string/twentyFive"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/twentyfivePercentTotalValue"
            app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTotalValue"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>